# desafio_lacrei_saude

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yaml
src/config/: settings.py  urls.py
src/core/: models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
tests/: base.py  test_authenticate.py  test_consultations.py  test_professionals.py
